
     Indices that are negative passed into VecSetValues...() are now ignored (rather than 
     generating an error). This allows easily keeping homogeneous Dirichlet boundary nodes out of the
     vectors and matrices for unstructured grid problems; just indicate those node numbers with 
     negative numbers.

  MAT

    Fixed bugs in MatReorderForNonzeroDiagonal() and made it more
    robust.   

    Fixed bugs in factorization for AIJ matrices with variable size
    inodes

    MatGetSubMatrixCall replaced with MatReuse   

    Changed the calling sequence of MatILUFactor() and MatILUFactorSymbolic() to increase
    flexibility of adding new ILU options

     Indices that are negative passed into MatSetValues...() are now ignored (rather than 
     generating an error). This allows easily keeping homogeneous Dirichlet boundary nodes out of the
     vectors and matrices for unstructured grid problems; just indicate those node numbers with 
     negative numbers.

  KSP

    The option -ksp_bsmonitor is not longer needed, use -ksp_truemonitor for the same 
    affect.
    
    
  PC

  Added option -pc_ilu_diagonal_fill PCILUSetAllowDiagonalFill() see manual page;
  helps for ILU(k) on matrices with missing diagonal entries.

  Removed support for block Gauss-Seidel from the distribution -pc_type bgs    

  AO

    

  IS

    
  Draw

    DrawCreate() creates a generic draw object whose type can be set at run time
    with DrawSetType()

    VIEWER_DRAWX_.... replaced with VIEWER_DRAW_....

  General

    Added OptionsGetLogical()

    Remove the gvec directory from the distribution. If you are using this
 please let us and know and we can provide it or provide alternative code
to do what you need.

    Moved all the compiler/optimization information for each PETSC_ARCH
    from the various base.g, base.O_c++ etc files all into the single file
    base. Now configuration for your system should require only editing